src/deck-container/deck-container.component.scss
#deck-container {
  position: relative;
  color: white;
  width: 350px;
  background-color: rgba($color: #000000, $alpha: 0.8);
  border-radius: 4px;

  --mat-filled-button-icon-spacing: 0;
  --mat-filled-button-icon-offset: 0;

  // height: calc(100dvh - 90px);
  padding: 10px;
}

// #search-filter-container {
//     z-index: 1;
//     position: relative;
//     display: flex;
//     justify-content: space-between;
//     margin-bottom: 10px;
// }

// #copy-deck-button {
//     z-index: ;
// }

mat-label {
  color: gray;
}

#deck-info-container {
  display: flex;
}

#card-count {
  display: flex;
  align-items: center;
}

.class-indicator-holder {
  display: flex;
  flex-wrap: wrap;
  padding: 10px 0;
}

#card-list-container {
  // height: 400px;
  height: calc(100dvh - 264px);
  overflow-y: auto;
  padding-bottom: 15px;

  img {
    height: 30px;
    width: 94%;
    object-fit: cover;
  }
}

@media screen and (max-width: 570px) {
  #deck-container {
    width: 100vw;
  }
}

.removeAllButton {
  margin-left: 10px;
  height: 80%;
}

.filters-container {
  position: absolute;
  // width: 150px;
  top: 78px;
  left: 0;
  right: 0;
  background-color: rgba($color: #000000, $alpha: 0.9);
  border: 1px white solid;
  border-radius: 4px;
  padding: 10px;
  z-index: 2;
  opacity: 0;
  display: none;
  animation-fill-mode: forwards;
}

// Slide in animation
.visible {
  display: block;
  animation: slideIn 0.2s ease-out forwards;
}

.hidden {
  animation: slideOut 0.2s ease-out forwards;
  display: none;
}

@keyframes slideIn {
  from {
    opacity: 0;
    transform: translateY(-10%);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideOut {
  from {
    opacity: 1;
    transform: translateY(0);
    display: block;
  }

  to {
    opacity: 0;
    transform: translateY(-10%);
    display: none;
  }
}

#mana-list-container {
  display: flex;
  padding-top: 0;
}

// .custom-icon-button {
//     color: black;
//     /* Change color to black */
// }

// #clear-deck-button {
//     margin-left: 10px;
// }

#import-deck-container {
  padding-top: 5px;
  background-color: #000000;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: nowrap;
  position: sticky;
  bottom: 0;
}

.mat-mdc-standard-chip {
  border-radius: 4px;
}

mat-slider {
  width: 74%;
  margin: 0 2px;
}

.cdk-drag-preview {
  display: none;
}

// hide the shown hover pic
.cdk-drag-placeholder > :nth-child(3) {
  display: none;
}

/* Animate items as they're being sorted. */
.cdk-drop-list-dragging .cdk-drag {
  transition: transform 200ms cubic-bezier(0, 0, 0.2, 1);
}

/* Animate an item that has been dropped. */
.cdk-drag-animating {
  transition: transform 100ms cubic-bezier(0, 0, 0.2, 1);
}

.amountModifier {
  position: absolute;
  top: 0.625rem;
  height: 1.65rem;
  width: 42px;
  cursor: pointer;
  background-color: #3f51b5;
  border-radius: 4px;
  transition: background-color 0.2s ease;

  // centering the icon in it
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0 0 1px 0px white;
}

.amountModifier:hover {
  background-color: #5c6bc0; /* Slightly lighter shade for hover */
}

// #cardRemoveModifier {
//   right: 48px;
// }

// #cardAddModifier {
//   right: 96px;
// }

